Cambio menu responsive, falta menu desplegable

--- a/style/main-style.css
+++ b/style/main-style.css
@@ -48,3 +48,9 @@ td {
     cursor: pointer;
     background-color: #454545 !important;
 }
+
+@media (max-width: 1400px) {
+    #cajaMenu{
+        display: none !important;
+    }
+}
